# roguelike

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  setup_hooks.sh
.github/workflows/: build.yml  tests.yml  unit_tests.yml
architecture/: General Information.txt  TypicalUser.md  architecture_drivers.md  class.puml  component_diagram.puml  component_diagram_description.txt  sequence.yml  usecase.puml
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Command.cpp  Command.h  Coordinate.h  Inventory.h  ItemType.h  Map.h  ObjectType.h  PlayerEquipment.h  PlayerMetrics.h  WorldUITransfer.h
src/common/serialization/: CMakeLists.txt  serialization.cpp  serialization.h
src/common/serialization/proto/: state.pb.cc  state.pb.h  state.proto
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
src/controller/input/: AbstractManager.cpp  AbstractManager.h  KeyboardManager.cpp  KeyboardManager.h
src/game_engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
src/game_engine/world_generator/: AbstractWorldGenerator.h
src/game_engine/world_state/: WorldState.cpp  WorldState.h
src/ui/: CMakeLists.txt  UI.cpp  UI.h  char_display.h  console_display.cpp  console_display.h  game_object_style.cpp  game_object_style.h
src/world/: CMakeLists.txt  Engine.cpp  Engine.h  RandomNumberGenerator.h
src/world/generator/: AbstractGenerator.cpp  AbstractGenerator.h  CMakeLists.txt  FromTheDisk.cpp  FromTheDisk.h  GeneratorBuilder.cpp  GeneratorBuilder.h  OnTheFly.cpp  OnTheFly.h
src/world/generator/serialization/: CMakeLists.txt  Deserializer.cpp  Deserializer.h  ProtobufEngine.cpp  ProtobufEngine.h  Serializer.cpp  Serializer.h  serialization.cpp  serialization.h
src/world/generator/serialization/proto/: action.proto  object.proto  state.proto
src/world/state/: CMakeLists.txt  Entity.cpp  Entity.h  Identity.h  State.cpp  State.h
src/world/state/action/: AbstractAction.cpp  AbstractAction.h  ActionType.h  Observer.cpp  Observer.h
src/world/state/action/concrete/: PickDropItem.cpp  PickDropItem.h  PickItem.cpp  PickItem.h  PlayerDrop.cpp  PlayerInteract.cpp  PlayerInteract.h  PlayerMove.cpp  PlayerMove.h  PlayerWear.cpp  PlayerWear.h  PlayerWearUnwear.cpp  PlayerWearUnwear.h  Poison.cpp  Poison.h
src/world/state/action/instant/: Move.cpp  Move.h  PlayerDrop.cpp  PlayerDrop.h  PlayerUIInteract.cpp  PlayerUIInteract.h  PlayerWorldInteract.cpp  PlayerWorldInteract.h
src/world/state/action/internal/: Confuse.cpp  Confuse.h  Move.cpp  Move.h  PickDropItem.cpp  PickDropItem.h  Poison.cpp  Poison.h
src/world/state/action/mold/: MoldEveryTurn.cpp  MoldEveryTurn.h  MoldInteraction.cpp  MoldInteraction.h
src/world/state/action/npc/: AbstractNPC.cpp  AbstractNPC.h  AggressiveNPC.cpp  AggressiveNPC.h  CowardNPC.cpp  CowardNPC.h  InactiveNPC.cpp  InactiveNPC.h
src/world/state/item/: AbstractItem.cpp  AbstractItem.h
src/world/state/item/concrete/: Ring.cpp  Ring.h  Stick.cpp  Stick.h
src/world/state/object/: AbstractObject.cpp  AbstractObject.h  Coordinate.h  Identity.h  Observer.cpp  Observer.h
src/world/state/object/concrete/: Artefact.cpp  Artefact.h  Floor.cpp  Floor.h  Mold.cpp  Mold.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Wall.cpp  Wall.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/engine/: generator_tests.cpp  state_tests.cpp
tools/: pre-push.hook
